--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "heroku-postbuild": "tsc"
   },
   "dependencies": {
-    "cors-anywhere": "^0.4.4"
+    "cors-anywhere": "^0.4.4",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
-    "dotenv": "^10.0.0",
     "typescript": "^4.3.5"
   }
 }
